# py-wideo

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: release-package.yml
api/: .env-template  README.md  manage.py  pyproject.toml
api/watch_this/: base  upload  utils
api/watch_this/django/: celery.py  settings.py  urls.py  wsgi.py
demo/: README.md
demo/api/: .env-template  README.md  manage.py  pyproject.toml
demo/api/demo/apps/cms/: models.py
demo/api/demo/apps/cms/migrations/: 0001_initial.py  0002_homepage.py  0003_homepage_video.py  0004_homepage_video_blocks.py  0005_alter_homepage_video_blocks.py  0006_alter_homepage_video_blocks.py
demo/api/demo/apps/cms/templates/cms/: home_page.html
demo/api/demo/apps/cms/templates/wagtail/userbar/templates/: base.html
demo/api/demo/apps/people/migrations/: 0001_initial.py
demo/api/demo/django/: asgi.py  celery.py  routing.py  settings.py  urls.py  wsgi.py
demo/front/: README.md  nuxt.config.js  package-lock.json  package.json
doc/source/: cleanup-task.md  conf.py  contributing.md  custom-models.md  custom-presets.md  index.rst  installation.md  tasks.md
front/: nuxt.config.js  package-lock.json  package.json
package/: README.md  pyproject.toml
package/src/watch_this/base/: __init__.py  apps.py  models.py
package/src/watch_this/base/migrations/: 0001_initial.py
package/src/watch_this/upload/: apps.py  models.py  serializers.py  urls.py  views.py
package/src/watch_this/upload/migrations/: 0001_initial.py
package/src/watch_this/utils/: storage.py
src/watch_this/: __init__.py  admin_urls.py  apps.py  blocks.py  ffmpeg.py  fields.py  forms.py  models.py  permissions.py  signals.py  storage.py  views.py  wagtail_hooks.py
src/watch_this/migrations/: 0001_initial.py
src/wideo/: blocks.py  codecs.py  exceptions.py  ffmpeg.py  models.py  signals.py  tasks.py  views.py
src/wideo/migrations/: 0004_alter_video_upload.py
(+12 files in other folders)
