[tool.poetry]
name = "demo"
version = "0.0.0"
description = ""
authors = []
license = "Proprietary"

packages = [
    {include = "demo"},
]

[tool.poetry.dependencies]
python = "~3.10"
modelw-preset-django = {extras = ["celery", "channels", "wagtail"], version = ">=2023.4.0b1,<2023.7.0", allow-prereleases = true}
drf-spectacular = {extras = ["sidecar"], version = "^0.26.2"}
django-extensions = "^3.2.1"
watch-this = {path = "../..", develop = true}

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
ipython = "*"

[tool.isort]
profile = "black"
known_first_party = "demo"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
